oscen-macros/tests/ui/feedback_marker_missing.stderr
warning: the feature `inherent_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
 --> tests/ui/feedback_marker_missing.rs:6:12
  |
6 | #![feature(inherent_associated_types)]
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #8995 <https://github.com/rust-lang/rust/issues/8995> for more information
  = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `Delay: AllowsFeedback` is not satisfied
  --> tests/ui/feedback_marker_missing.rs:38:14
   |
38 |     node d = Delay::new();
   |              ^^^^^ unsatisfied trait bound
   |
help: the trait `AllowsFeedback` is not implemented for `Delay`
  --> tests/ui/feedback_marker_missing.rs:15:1
   |
15 | pub struct Delay {
   | ^^^^^^^^^^^^^^^^
help: the trait `AllowsFeedback` is implemented for `oscen::Delay`
  --> $WORKSPACE/oscen-lib/src/delay/mod.rs
   |
   | impl AllowsFeedback for Delay {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `_assert_allows_feedback`
  --> tests/ui/feedback_marker_missing.rs:41:9
   |
41 |         g.output -> [d] -> g.input;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `_assert_allows_feedback`
